--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -48,6 +48,7 @@
 @import "./components/navbar";
 @import "./components/bottom-navbar";
 @import "./components/admin-users";
+@import "./components/admin-notification";
 @import "./components/titlebar";
 @import "./components/branches";
 @import "./components/test-access";
